# eruspy

./: Cargo.toml  README.md
.github/workflows/: release.yml
eruspy-python/: Cargo.toml  README.md  main.py  pyproject.toml
eruspy-python/src/: lib.rs
examples/python-only/: client.py  server.py
examples/rust-client_python-server/: Cargo.toml  server.py
examples/rust-only/: Cargo.toml
examples/rust-server_python-client/: Cargo.toml  client.py
src/: lib.rs  main.rs  util.rs
src/client/: mod.rs
src/server/: mod.rs
