[package]
name = "eruspy"
version = "0.1.1"
authors = ["dentimoer-official <dentimoer@icloud.com>"]
license = "MIT OR Apache-2.0"
description = "It helps you to deliver file or folder between you and your target server"
keywords = ["server", "client", "simple"]
edition = "2021"

[features]
default = []
server = ["dep:actix-web"]
client = ["dep:reqwest"]

[dependencies]
serde     = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zip       = { version = "8.5.1", features = ["deflate"] }

# optional: pulled in only when the matching feature is enabled
actix-web = { version = "4.13.0", optional = true }
reqwest   = { version = "0.13.2", features = ["blocking", "json"], optional = true }
