[build-system]
requires      = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name            = "eruspy"
version         = "0.1.6"
description     = "File and directory transfer over HTTP — Rust speed, Python convenience"
readme          = "README.md"
license         = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.8"
keywords        = ["file-transfer", "http", "rust", "pyo3", "actix"]
classifiers     = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Filesystems",
]

[tool.maturin]
module-name = "eruspy"
features    = ["pyo3/extension-module"]
